[package]
name = "remote-closedown"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive", "env"] }
env_logger = "0.9"
log = "0.4"
paho-mqtt = { version = "0.10", default-features = false, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sysfs_gpio = "0.6"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
